[package]
name = "spacetraders-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spacetraders"
path = "lib/mod.rs"

[[bin]]
name = "spacetraders-rs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = [ "serde" ] }
