[package]
name = "spacetraders-rs"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spacetraders-rs"
path = "src/main.rs"

[dependencies]
spacetraders = { path = "spacetraders" }
tokio = { version = "1", features = [ "full" ] }
tokio-postgres = { version = "0.7.0", features = [ "with-chrono-0_4" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
