[package]
name = "spacetraders-api"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spacetraders-api"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0-beta.5"
actix-cors = "0.6.0-beta.1"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
anyhow = "1.0.40"
serde = "1.0.125"
serde_json = "1.0.64"
env_logger = "0.8.3"
