[package]
name = "spacemonger-daemon"
version = "0.1.0"
authors = ["Brennon Loveless <brennon.loveless@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spacemongerd"
path = "src/main.rs"

[dependencies]
spacetraders = { path = "../spacetraders" }
tokio = { version = "1", features = [ "full" ] }
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
sqlx = { version = "0.5.1", features = [ "runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate" ] }
futures = "0.3.13"
reqwest = { version = "0.11", features = [ "json" ] }
serde = "1.0.126"
serde_json = "1.0.64"
log = "0.4.14"
env_logger = "0.8.3"
rand = "0.8.3"
anyhow = "1.0.40"
